# ml-seqclass

./: .gitignore  Cargo.toml  README.md  flake.nix  get-proportions.py  out.matches  read_idxs.json  ref_idxs.json  requirements.txt  sample-references.fasta
ml-seqclass-jacs/read-samples-sim-reads/: sample-references.fasta.sufr
src/: main.rs  utils.rs
test-dataset/: new-refs.fasta.sufr
