[package]
name = "seq_class"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shrust = "0.0.7"
bio = "1.3.0"
indicatif = {version="0.17.8", features = ["rayon"]}
clap = { version = "4.0", features = ["derive"] }
serde = "1.0.152"
serde_json = "1.0.91"
error-chain = "0.12.4"
glob = "0.3.1"
rayon = "1.7.0"
itertools = "0.12.1"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
libsufr = "0.7.12"
anyhow = "1.0.98"
tabled = "0.20.0"
format_num = "0.1.0"
textwrap = "0.16.2"
flate2 = "1.1.2"
ndarray-stats = "0.6.0"
chrono = "0.4.42"